--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "bootstrap": "^4.5.0",
     "react": "16.8.6",
+    "react-bootstrap": "^1.2.2",
     "react-dom": "16.8.6",
     "react-scripts": "3.2.0"
   },
